; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_ct_eval_incdec.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_ct_eval_incdec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZEND_PRE_INC = common dso_local global i64 0, align 8
@ZEND_POST_INC = common dso_local global i64 0, align 8
@ZEND_PRE_INC_OBJ = common dso_local global i64 0, align 8
@ZEND_POST_INC_OBJ = common dso_local global i64 0, align 8
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32*)* @ct_eval_incdec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ct_eval_incdec(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = call i32 @ZVAL_COPY(i32* %7, i32* %8)
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @ZEND_PRE_INC, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %25, label %13

13:                                               ; preds = %3
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @ZEND_POST_INC, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %25, label %17

17:                                               ; preds = %13
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @ZEND_PRE_INC_OBJ, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %25, label %21

21:                                               ; preds = %17
  %22 = load i64, i64* %5, align 8
  %23 = load i64, i64* @ZEND_POST_INC_OBJ, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %21, %17, %13, %3
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @increment_function(i32* %26)
  br label %31

28:                                               ; preds = %21
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @decrement_function(i32* %29)
  br label %31

31:                                               ; preds = %28, %25
  %32 = load i32, i32* @SUCCESS, align 4
  ret i32 %32
}

declare dso_local i32 @ZVAL_COPY(i32*, i32*) #1

declare dso_local i32 @increment_function(i32*) #1

declare dso_local i32 @decrement_function(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
